fix: css aligned with ui style

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -12754,6 +12754,14 @@ span.is-disabled {
     text-decoration: none;
     color: inherit;
   }
+
+  &-title {
+    color: #444a4f;
+  }
+
+  &-detail {
+    color: #b4b7b9;
+  }
 }
 
 .section-inner {
